<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
	<EditTextPreference
		android:key="pref_username"
		android:title="@string/pref_username"
		android:summary="@string/pref_username_summ"
		android:defaultValue="android" />
	
	<EditTextPreference
		android:key="pref_username_alias"
		android:title="@string/pref_username_alias"
		android:summary="@string/pref_username_alias_summ"
		android:defaultValue="a" />
	
	<ListPreference
		android:key="pref_language"
		android:title="@string/pref_language"
		android:summary="@string/pref_language_summ" />

	<EditTextPreference
        android:key="pref_jade_host"
        android:title="@string/pref_jade_host"
        android:summary="@string/pref_jade_host_summ"
        android:defaultValue="192.168.1.2" />
	
    <EditTextPreference
        android:key="pref_jade_port"
        android:title="@string/pref_jade_port"
        android:summary="@string/pref_jade_port_summ"
        android:inputType="number"
        android:defaultValue="1099" />
	
    <PreferenceScreen 
        android:key="pref_memorae"
        android:title="@string/pref_memorae"
        android:summary="@string/pref_memorae_summ"
        android:persistent="false" >
       
        <CheckBoxPreference
			android:key="pref_memorae_enabled"
			android:title="@string/pref_memorae_enabled"
    		android:defaultValue="true" />
                
        <EditTextPreference
			android:key="pref_memorae_username"
			android:title="@string/pref_memorae_username"
			android:summary="@string/pref_memorae_username_summ"
			android:defaultValue="" />
        
        <EditTextPreference
			android:key="pref_memorae_password"
			android:title="@string/pref_memorae_password"
			android:summary="@string/pref_memorae_password_summ"
			android:defaultValue="" />
        	
		<EditTextPreference
	        android:key="pref_memorae_host"
	        android:title="@string/pref_memorae_host"
	        android:summary="@string/pref_memorae_host_summ"
	        android:defaultValue="http://www.hds.utc.fr/memorae/flex/json_gateway.php/" />
        
    </PreferenceScreen>
    
    <PreferenceScreen 
        android:key="pref_translator"
        android:title="@string/pref_translator"
        android:summary="@string/pref_translator_summ"
        android:persistent="false" >
       
        <CheckBoxPreference
			android:key="pref_translator_bing"
			android:title="@string/pref_translator_bing"
    		android:defaultValue="false" />
                
        <EditTextPreference
			android:key="pref_bing_client"
			android:title="@string/pref_bing_client"
			android:defaultValue="328957c3-636a-4134-a67c-0bdfc6b40fec" />
        
        <EditTextPreference
			android:key="pref_bing_secret"
			android:title="@string/pref_bing_secret"
			android:defaultValue="dRmM71r5yhnRpDjJiEHEXcxRDcyTLNUTt9vccTJv9RE=" />
        
    </PreferenceScreen>
    
</PreferenceScreen>