<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_clear_model"
        android:title="@string/menu_clear_model"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_disconnect_meeting"
        android:title="@string/menu_disconnect_meeting"
        android:orderInCategory="100"
        android:enabled="true"
        android:showAsAction="never" />
    <item android:id="@+id/menu_change_memorae"
        android:title="@string/menu_change_memorae"
        android:orderInCategory="100"
        android:enabled="true"
        android:showAsAction="never" />
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        android:enabled="true"
        android:showAsAction="never" />
</menu>
