<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:background="@color/abackground"
    android:orientation="vertical" >
	    
	    <EditText
	        android:id="@+id/title"
	        android:hint="@string/ph_postit_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textAutoCorrect" />
	    
	    <EditText
	        android:id="@+id/content"
	        android:hint="@string/ph_postit_content"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:inputType="textMultiLine|textAutoCorrect" />
	    		    
   	    <EditText
	        android:id="@+id/tags"
        	android:hint="@string/ph_postit_tags"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
        	android:inputType="textAutoCorrect" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:gravity="center_horizontal" >
		    
		    <Button
		        android:id="@+id/cancel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel" />
	        
		    <Button
		        android:id="@+id/save"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/save" />
	    </LinearLayout>
	    
</LinearLayout>
