<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
   		android:gravity="top|center_horizontal"
	    android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/langB"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
   			android:layout_margin="2dp" />
	    
	   <Button
	        android:id="@+id/createPostIt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
   			android:layout_margin="2dp"
	        android:text="@string/button_new" />
	    	    
	    <Button
	        android:id="@+id/remove"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
   			android:layout_margin="2dp"
	        android:text="@string/button_remove" />
	    
	</LinearLayout>
	    
	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
   		android:gravity="bottom|center_horizontal"
	    android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/local"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
   			android:layout_margin="2dp"
	        android:text="@string/button_local" />
	    
	    <Button
	        android:id="@+id/meeting"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
   			android:layout_margin="2dp"
	        android:text="@string/button_meeting" />
	    
	    <Button
	        android:id="@+id/memorae"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
   			android:layout_margin="2dp"
	        android:text="@string/button_memorae" />
	    
    </LinearLayout>
	    
</LinearLayout>
