<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/background"
	android:orientation="vertical" >
       	    
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/gridClusterTitleLL"
			android:layout_width="match_parent"
		 	android:layout_height="0dp"
		 	android:visibility="invisible"
			android:orientation="horizontal" >
        	
		    <Button
		        android:id="@+id/gridUpB"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/root" />
		    
        	<EditText
		        android:id="@+id/gridClusterTitleET"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
 		   
        	<Button
		        android:id="@+id/gridClusterTitleB"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/save" />
        	
       	</LinearLayout>
       	
    	<GridView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/gridview"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		    android:columnWidth="190dp"
		    android:gravity="center"
		    android:horizontalSpacing="10dp"
		    android:numColumns="auto_fit"
		    android:padding="10dp"
		    android:stretchMode="columnWidth"
		    android:verticalSpacing="10dp" />
    	
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
		 	android:layout_height="wrap_content"
			android:orientation="horizontal" >
        	
		    <TextView
		        android:id="@+id/gridFilterTagsTV"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/filter" />
		    
        	<EditText
		        android:id="@+id/gridFilterTagsET"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
        	
       	</LinearLayout>
    	
	
</LinearLayout>